--- a/src/components/Navigation/Navigation.module.css
+++ b/src/components/Navigation/Navigation.module.css
@@ -1,16 +1,18 @@
-nav {
-  background-color: rgb(50, 50, 50);
+.navigation {
+  background-color: rgba(50, 50, 50, 98%);
   color: rgb(214, 214, 214);
+  width: 100%;
   max-width: 100%;
+  position: fixed;
 }
 ul {
   display: flex;
-  max-width: 900px;
+  max-width: 1100px;
   min-width: 800px;
   justify-content: space-between;
   list-style-type: none;
   margin: 0 auto;
-  padding: 0.6rem 0.6rem;
+  padding: 0.4rem 0.6rem;
   align-items: center;
 }
 li {
@@ -24,4 +26,7 @@ li:hover {
 }
 .apple {
   font-size: 20px;
+}
+.navigation i {
+  padding: 0.5rem;
 }
