--- a/src/components/Navigation/Navigation.module.css
+++ b/src/components/Navigation/Navigation.module.css
@@ -1,11 +1,11 @@
 .navigation {
-  background-color: rgba(50, 50, 50, 98%);
+  background-color: rgba(50, 50, 50, 97%);
   color: rgb(214, 214, 214);
   width: 100%;
   max-width: 100%;
   position: fixed;
 }
-ul {
+.navUl {
   display: flex;
   max-width: 1100px;
   min-width: 800px;
@@ -15,13 +15,13 @@ ul {
   padding: 0.4rem 0.6rem;
   align-items: center;
 }
-li {
+.navLink {
   font-size: 14px;
   font-weight: 300;
   cursor: pointer;
   transition: color 0.2s ease-in-out;
 }
-li:hover {
+.navLink:hover {
   color: rgb(255, 255, 255);
 }
 .apple {
