--- a/src/components/Navigation/Navigation.module.css
+++ b/src/components/Navigation/Navigation.module.css
@@ -21,12 +21,16 @@
   cursor: pointer;
   transition: color 0.2s ease-in-out;
 }
-.navLink:hover {
-  color: rgb(255, 255, 255);
-}
 .apple {
   font-size: 20px;
 }
 .navigation i {
   padding: 0.5rem;
+}
+.Link {
+  color: rgb(214, 214, 214);
+  text-decoration: none;
+}
+.Link:hover {
+  color: rgb(255, 255, 255);
 }
