--- a/src/components/Models/Models.module.css
+++ b/src/components/Models/Models.module.css
@@ -22,16 +22,21 @@
   font-size: 48px;
   font-weight: 600;
 }
-.link {
+.Link {
   color: rgba(41, 100, 196, 100%);
   font-weight: 400;
   font-size: 18px;
   cursor: pointer;
   width: fit-content;
   margin: 0 auto;
+  text-decoration: none;
 }
-.link:hover {
+.Link:hover {
   text-decoration: underline;
+}
+.Link_tv {
+  color: black;
+  text-decoration: none;
 }
 .productImages {
   display: flex;
@@ -139,7 +144,7 @@
 }
 /*? TILES  */
 .tiles {
-  width: 100%;
+  max-width: 100%;
   display: flex;
   flex-direction: row;
   flex-wrap: wrap;
